
# 1.2.0 : --/--/2020

* ROUTE_INCLUDE_REQJIRED remplacé par ROUTE_INCLUDE_REQUIRED
* ROUTE_INCLUDE_LISTE et ROUTE_INCLUDE_REQUIRED sont désormais utilisables
* ApiController,HttpFactoryTrait : gestion des reponses
* Database migrations light via sql
* FindFirst & sort cols
* removeOne, chez id exists and data loaded
* beforeCreate and beforeSave call on right place
* Between and transaction
* Core.Model : initWithJson (correction de la gestion des champs avec propriété PUBLIC)
* Core.Model : behaviour on models (standard, raw, api) for db actions
* Core.Model : nouvelle méthode getFiedName
* Behaviour.ValidatorTrait : nouvelles méthodes isCreation, isModification
* Storage.PDOStorage : correction de l'utilisation du getUniqIndexes avec un tableau de champs au lieu d'1 string
* constants : nouvelles constantes
* Adaptations DI
* alerts
* simple rate
* StorageModel.getFieldsForSelect : ne rajoute plus les champs LOCAL dans la clause SELECT
* PDO.* : gestion des functions basique (MIN, MAX, ...) + limitation de la clause select

** WARNING **

* getNew on Model                   replaces by new
* get('FreeFW::Model::ResultSet')   replaced by new
* get('FreeFW::Model::Query')       replaced by new
* get('FreeFW::Model::*Condition*') replaced by new

# 1.1.0 : 24/05/2020

* PBXArray
* Email
* OR sur find
* eq NULL transformé en ISNULL
* autocomplete multi champs de recherche
* JsonApi optimizations (Encoder / Decoder)
* Date functions updates
* Monetary
* Query addons
* Jobqueue & Notifications
* Mailer / Messages / Json response
* Transaction on create, save ou remove
* Basic errors for foreign-keys, uniq keys

# 1.0.9 : 08/03/2020

* Nested Tree create and remove

# 1.0.8 : 23/02/2020

* Greater or equal or null condition

# 1.0.7 : 09/02/2020

* Error on remove API call

# 1.0.6 : 01/02/2020

* * ApiController, reread after create or update

# 1.0.5 : 20/01/2020

* MediaResponse
* Start count in StorageInterface
* Where in relations

# 1.0.4 : Autologin & bugs
