@@ -1,6 +1,7 @@
 
 # 1.2.0 : --/--/2020
 
+* Séparation de la gestion des errors et des validations.
 * ROUTE_INCLUDE_REQJIRED remplacé par ROUTE_INCLUDE_REQUIRED
 * ROUTE_INCLUDE_LISTE et ROUTE_INCLUDE_REQUIRED sont désormais utilisables
 * ApiController,HttpFactoryTrait : gestion des reponses
